--- a/package.json
+++ b/package.json
@@ -1,30 +1,17 @@
 {
-    "name": "nuxt-app",
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "build": "nuxt build",
-        "dev": "nuxt dev",
-        "generate": "nuxt generate",
-        "preview": "nuxt preview",
-        "postinstall": "nuxt prepare"
-    },
-    "dependencies": {
-        "@prisma/client": "6.4.1",
-        "nuxt": "^3.15.4",
-        "uuid": "^11.1.0",
-        "vue": "latest",
-        "vue-router": "latest",
-        "yup": "^1.6.1"
-    },
-    "devDependencies": {
-        "@iconify-json/mdi": "^1.2.3",
-        "@nuxt/icon": "^1.10.3",
-        "@nuxtjs/tailwindcss": "^6.13.1",
-        "@prisma/nuxt": "^0.3.0",
-        "@vee-validate/nuxt": "^4.15.0",
-        "nuxt-cron": "^1.8.0",
-        "nuxt-resend": "^0.0.2",
-        "prisma": "6.4.1"
-    }
+  "name": "nuxt-app",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
+  },
+  "dependencies": {
+    "nuxt": "^3.15.4",
+    "vue": "latest",
+    "vue-router": "latest"
+  }
 }
