--- a/package.json
+++ b/package.json
@@ -10,8 +10,23 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@prisma/client": "6.4.1",
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@iconify-json/mdi": "^1.2.3",
+    "@nuxt/icon": "^1.10.3",
+    "@nuxtjs/google-fonts": "^3.2.0",
+    "@nuxtjs/tailwindcss": "^6.13.1",
+    "@prisma/nuxt": "^0.3.0",
+    "@vee-validate/nuxt": "^4.15.0",
+    "@vee-validate/yup": "^4.15.0",
+    "nuxt-cron": "^1.8.0",
+    "nuxt-resend": "^0.0.2",
+    "prisma": "6.4.1",
+    "uuid": "^11.1.0",
+    "yup": "^1.6.1"
   }
 }
