--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "postinstall": "nuxt prepare"
     },
     "dependencies": {
+        "@prisma/client": "6.4.1",
         "nuxt": "^3.15.4",
         "vue": "latest",
         "vue-router": "latest"
@@ -19,8 +20,10 @@
         "@nuxt/icon": "^1.10.3",
         "@nuxtjs/google-fonts": "^3.2.0",
         "@nuxtjs/tailwindcss": "^6.13.1",
+        "@prisma/nuxt": "^0.3.0",
         "@vee-validate/nuxt": "^4.15.0",
         "@vee-validate/yup": "^4.15.0",
+        "prisma": "6.4.1",
         "yup": "^1.6.1"
     }
 }
