--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
         "@prisma/nuxt": "^0.3.0",
         "@vee-validate/nuxt": "^4.15.0",
         "@vee-validate/yup": "^4.15.0",
+        "nuxt-cron": "^1.8.0",
+        "nuxt-resend": "^0.0.2",
         "prisma": "6.4.1",
+        "uuid": "^11.1.0",
         "yup": "^1.6.1"
     }
 }
