--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
         "postinstall": "nuxt prepare"
     },
     "dependencies": {
-        "@prisma/client": "6.4.1",
-        "nuxt": "^3.15.4",
-        "vue": "latest",
-        "vue-router": "latest"
+        "nuxt": "^3.16.0",
+        "vue": "^3.5.13",
+        "vue-router": "^4.5.0"
     },
     "devDependencies": {
-        "@iconify-json/mdi": "^1.2.3",
         "@nuxt/icon": "^1.10.3",
         "@nuxtjs/google-fonts": "^3.2.0",
         "@nuxtjs/tailwindcss": "^6.13.1",
@@ -26,7 +24,6 @@
         "@vue-email/nuxt": "^0.8.19",
         "nuxt-cron": "^1.8.0",
         "nuxt-resend": "^0.0.2",
-        "prisma": "6.4.1",
         "uuid": "^11.1.0",
         "yup": "^1.6.1"
     }
