--- a/package.json
+++ b/package.json
@@ -1,30 +1,25 @@
 {
-    "name": "nuxt-app",
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "build": "nuxt build",
-        "dev": "nuxt dev",
-        "generate": "nuxt generate",
-        "preview": "nuxt preview",
-        "postinstall": "nuxt prepare"
-    },
-    "dependencies": {
-        "nuxt": "^3.16.0",
-        "vue": "^3.5.13",
-        "vue-router": "^4.5.0"
-    },
-    "devDependencies": {
-        "@nuxt/icon": "^1.10.3",
-        "@nuxtjs/google-fonts": "^3.2.0",
-        "@nuxtjs/tailwindcss": "^6.13.1",
-        "@prisma/nuxt": "^0.3.0",
-        "@vee-validate/nuxt": "^4.15.0",
-        "@vee-validate/yup": "^4.15.0",
-        "@vue-email/nuxt": "^0.8.19",
-        "nuxt-cron": "^1.8.0",
-        "nuxt-resend": "^0.0.2",
-        "uuid": "^11.1.0",
-        "yup": "^1.6.1"
-    }
+  "name": "nuxt-app",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
+  },
+  "dependencies": {
+    "@nuxt/eslint": "^1.2.0",
+    "eslint": "^9.22.0",
+    "nuxt": "^3.16.0",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
+  },
+  "devDependencies": {
+    "@nuxt/fonts": "^0.11.0",
+    "@nuxt/icon": "^1.11.0",
+    "@nuxt/image": "^1.9.0",
+    "@nuxtjs/tailwindcss": "^6.13.2"
+  }
 }
