--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
               with:
                   host: ${{ secrets.SSH_HOST }}
                   username: ${{ secrets.SSH_USER }}
-                  key: ${{ secrets.SSH_PRIVITE_KEY }}
+                  key: ${{ secrets.SSH_PRIVATE_KEY }}
                   script: |
                       cd /opt/web
                       git pull origin main
