--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,5 @@ jobs:
                   script: |
                       cd /opt/web
                       git pull origin main
-                      docker build -t web-app .
-                      docker stop web-container || true
-                      docker rm web-container || true
-                      docker run -d --name web-container web-app
+                      docker-compose down
+                      docker-compose up -d --build
